--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<ul>
+<nav>
+    <li>logo</li>
     <li><a href="index.html">Home</a></li>
     <li><a href="index.html">What</a></li>
     <li><a href="index.html">Cause</a></li>
     <li><a href="index.html">Solution</a></li>
     <li><a href="index.html">explore</a></li>
-</ul>
+</nav>
+
+<section>
+    <li><a href="index.html">What</a></li>
+    <li><a href="index.html">Cause</a></li>
+    <li><a href="index.html">Solution</a></li>
+    <li><a href="index.html">Explore</a></li>
+    <img src="Earth.jpg" />
+</section>
 
     <h1>What is Global Warming?</h1>
     <P>The gradual increase in global temperature from Human activities</P>
