--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 </nav>
 
 <section>
-    <li><a href="index.html">What</a></li>
-    <li><a href="index.html">Cause</a></li>
-    <li><a href="index.html">Solution</a></li>
-    <li><a href="index.html">Explore</a></li>
-    <img src="Earth.jpg" />
+    <ul class="pie">
+        <li class="slice"><a class="slice-contents" href="making_things.html">Making things</a></li>
+        <li class="slice"><a class="slice-contents" href="pluggin_in.html">Plugging in</a></li>
+        <li class="slice"><a class="slice-contents" href="growing_things.html">Growing Things</a></li>
+        <li class="slice"><a class="slice-contents" href="getting_around.html">Getting Around</a></li>
+        <li class="slice"><a class="slice-contents" href="regulation.html">Keeping warm and cool</a></li>
+    </ul>
 </section>
 
     <h1>What is Global Warming?</h1>
